--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,13 +12,8 @@ updates:
     schedule:
       interval: "weekly"
 
-  # (Optional) Monitor Dockerfiles in your image directories
-  - package-ecosystem: "docker"
-    directory: "/images/common-build"
-    schedule:
-      interval: "weekly"
-
-  - package-ecosystem: "docker"
-    directory: "/images/deploy"
-    schedule:
-      interval: "weekly"
+  # (Optional) If you have actual Dockerfiles in other directories, include them here
+  # - package-ecosystem: "docker"
+  #   directory: "/path/to/other/dockerfile"
+  #   schedule:
+  #     interval: "weekly"
