--- a/.github/workflows/common_build_image.yml
+++ b/.github/workflows/common_build_image.yml
@@ -34,19 +34,19 @@ jobs:
 
       - name: Build Image
         working-directory: images/common-build
-        run: packer build -var-file=variables.pkr.hcl common_build.pkr.hcl
+        run: packer build -var-file=variables.pkr.hcl common-build.pkr.hcl
 
-      - name: Test Image
-        run: |
-          docker run --rm your-dockerhub-username/common-build-image:latest bash -c "/test_image.sh"
+      # - name: Test Image
+      #   run: |
+      #     docker run --rm your-dockerhub-username/common-build-image:latest bash -c "/test_image.sh"
 
-      - name: Login to Docker Hub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   if: github.event_name != 'pull_request'
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Image to Docker Hub
-        if: github.event_name != 'pull_request'
-        run: docker push your-dockerhub-username/common-build-image:latest
+      # - name: Push Image to Docker Hub
+      #   if: github.event_name != 'pull_request'
+      #   run: docker push your-dockerhub-username/common-build-image:latest
