--- a/.github/workflows/common_deploy_image.yml
+++ b/.github/workflows/common_deploy_image.yml
@@ -33,20 +33,20 @@ jobs:
           sudo apt-get install -y unzip
 
       - name: Build Image
-        working-directory: images/deploy
-        run: packer build -var-file=variables.pkr.hcl deploy_image.pkr.hcl
+        working-directory: images/common-deploy
+        run: packer build -var-file=variables.pkr.hcl common-deploy.pkr.hcl
 
-      - name: Test Image
-        run: |
-          docker run --rm your-dockerhub-username/deploy-image:latest bash -c "/test_image.sh"
+      # - name: Test Image
+      #   run: |
+      #     docker run --rm your-dockerhub-username/deploy-image:latest bash -c "/test_image.sh"
 
-      - name: Login to Docker Hub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Login to Docker Hub
+      #   if: github.event_name != 'pull_request'
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push Image to Docker Hub
-        if: github.event_name != 'pull_request'
-        run: docker push your-dockerhub-username/deploy-image:latest
+      # - name: Push Image to Docker Hub
+      #   if: github.event_name != 'pull_request'
+      #   run: docker push your-dockerhub-username/common-deploy-image:latest
