updated git workflow for pkrvars change

--- a/.github/workflows/common_build_image.yml
+++ b/.github/workflows/common_build_image.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build Image
         working-directory: images/common-build
-        run: packer build -var-file=variables.pkr.hcl common-build.pkr.hcl
+        run: packer build -var-file=variables.pkrvars.hcl common-build.pkr.hcl
 
       # - name: Test Image
       #   run: |
