--- a/.github/workflows/common_build_image.yml
+++ b/.github/workflows/common_build_image.yml
@@ -32,6 +32,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y unzip
 
+      - name: Packer init
+        working-directory: images/common-build
+        run: packer init common-build.pkr.hcl
+
       - name: Build Image
         working-directory: images/common-build
         run: packer build common-build.pkr.hcl
