--- a/.github/workflows/common_build_image.yml
+++ b/.github/workflows/common_build_image.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Packer
         uses: hashicorp/setup-packer@v3
         with:
-          packer_version: latest
+          version: latest
 
       - name: Install Dependencies
         run: |
