--- a/.github/workflows/common_deploy_image.yml
+++ b/.github/workflows/common_deploy_image.yml
@@ -1,4 +1,4 @@
-name: Build and Test Deploy Image
+name: Build and Test Common Deploy Image
 
 on:
   push:
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build:
-    name: Build and Test Deploy Image
+    name: Build and Test Common Deploy Image
     runs-on: ubuntu-latest
 
     steps:
