--- a/.github/workflows/common_deploy_image.yml
+++ b/.github/workflows/common_deploy_image.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches: [main]
     paths:
-      - 'images/deploy/**'
-      - '.github/workflows/build_deploy_image.yml'
+      - 'images/common-deploy/**'
+      - '.github/workflows/common_deploy_image.yml'
   pull_request:
     branches: [main]
     paths:
-      - 'images/deploy/**'
-      - '.github/workflows/build_deploy_image.yml'
+      - 'images/common-deploy/**'
+      - '.github/workflows/common_deploy_image.yml'
   workflow_dispatch:
 
 jobs:
